# reed-solomon-codec

./: CMakeLists.txt  Makefile  README.md  main.cpp  tests.md
include/: gf.h  gf_poly.h  rs.h
src/: gf.cpp  gf_poly.cpp  rs.cpp
tests/: CMakeLists.txt  gf.cpp  rs.cpp
